tests/type_errors/type_mismatch.xs
fn double(x: i32) -> i32 {
    return "not an int"
}
println(double(5))
